k8s/overlays/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: mais-saude-frontend
  ports:
    - port: 80
      targetPort: 8080
